--- a/client/src/App.css
+++ b/client/src/App.css
@@ -232,7 +232,7 @@
 }
 .zero-waste-subtitle {
   /* color: #617221; */
-  color: var(--gren);
+  color: var(--green);
   font-weight: bold;
   letter-spacing: .05em;
   font-size: 24px;
