--- a/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/Delivery.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/Delivery.xaml
@@ -10,7 +10,7 @@
         <Grid>
                 
                 <Grid.RowDefinitions>
-                    <RowDefinition/>    <!-- status row   -->
+                    <RowDefinition Height="75"/>    <!-- status row   -->
                     <RowDefinition/>    <!-- first name row   -->
                     <RowDefinition/>    <!-- last name row -->
                     <RowDefinition/>    <!-- phone number row -->
