--- a/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/Payment.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/Payment.xaml
@@ -9,7 +9,7 @@
         <Grid>
             
             <Grid.RowDefinitions>
-                <RowDefinition/>
+                <RowDefinition Height="75"/>
                 <RowDefinition/>
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="0.5*"/>
