--- a/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/Summary.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/Checkout/Summary.xaml
@@ -6,165 +6,156 @@
              mc:Ignorable="d"
              x:Class="InfiniteMeals.ViewModel.Checkout.Summary">
     <ContentPage.Content>
-        <ScrollView>
+        <!-- grid for the entire page -->
+        <Grid Grid.RowSpacing="3" BackgroundColor="White">
 
-
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="0.5*"/>    <!-- status bar -->
-                    <RowDefinition Height="0.5*"/>    <!-- subscription plan -->
-                    <RowDefinition Height="1.5*"/>    <!-- shipping info -->
-                    <RowDefinition Height="0.75*"/>    <!-- delivery info -->
-                    <RowDefinition/>                    <!-- payment info -->
-                    <RowDefinition Height="75"/>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75"/>    <!-- summary status bar -->
+                <RowDefinition />   <!-- order summary -->
+                <RowDefinition />   <!-- shipping details -->
+                <RowDefinition />   <!-- delivery instructions -->
+                <RowDefinition />    <!-- payment details  -->
+                <RowDefinition Height="75" />   <!-- confirm button-->
             </Grid.RowDefinitions>
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
 
-            <BoxView Grid.Row="0"/>
-            <Image Grid.Row="0" Grid.ColumnSpan="2" Source="summaryStatus" />
+            <!-- summary status bar -->
+            <BoxView Grid.Row="0" Grid.ColumnSpan="2"/>
+            <Image Grid.Row="0" Grid.ColumnSpan="2" Source="summaryStatus" VerticalOptions="Start" />
 
-            <BoxView Grid.Row="1"/>
-
-                
-                <StackLayout Grid.Row="1" Grid.ColumnSpan="2" Orientation="Vertical" Spacing="20">
-                    <Label Grid.Row="1" Grid.ColumnSpan="2" Text="Order Summary" TextColor="Black" FontSize="Large" FontAttributes="Bold" VerticalOptions="Start"/>
-                    <StackLayout Grid.Row="1" Orientation="Horizontal" VerticalOptions="Center">
-                        <StackLayout Grid.Row="1" Orientation="Horizontal" Grid.ColumnSpan="8">
-                            <Label x:Name="mealPlan" Grid.Row="1" Grid.ColumnSpan="2" TextColor="Black"/>
-                            <Label Grid.Row="1" Grid.ColumnSpan="2" Text="-" TextColor="Black"/>
-                            <Label x:Name="paymentOption" Grid.Row="1" Grid.ColumnSpan="2" HorizontalOptions="End" TextColor="Black"/>
-                            <Label Grid.Row="1" Grid.ColumnSpan="2" Text="- $100" TextColor="Black"/>
-                        </StackLayout>
-                        </StackLayout>
-                        
-                        <StackLayout Grid.Row="1" Orientation="Horizontal">
-                            <Label Grid.Row="1" Text="Estimated Shipping" TextColor="Black"/>
-                            <Label Grid.Row="1" Text="- $15" TextColor="Black"/>
-
-                        </StackLayout>
-                        
-                        <StackLayout Grid.Row="1" Orientation="Horizontal">
-                            <Label Grid.Row="1" Text="Estimated Tax" TextColor="Black"/>
-                            <Label Grid.Row="1" Text="- $10" TextColor="Black"/>
-                        </StackLayout>
-
-                    <StackLayout Grid.Row="1" Orientation="Horizontal"> 
-                        <Label Grid.Row="1" Text="Total: " FontSize="Medium" FontAttributes="Bold" TextColor="Black"/>
-                        <Label Grid.Row="1" Text="$125" FontSize="Medium" FontAttributes="Bold" TextColor="Black"/>
-                    </StackLayout>
-                </StackLayout>
-
-
-
-
-                <BoxView Grid.Row="2"/>
-            <Grid Grid.Row="2" Grid.ColumnSpan="2">
-                    <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    </Grid.RowDefinitions>
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                <BoxView Grid.Row="0"/>
-                <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Shipping Details" TextColor="Black" FontSize="Large" FontAttributes="Bold"/>
-
-                <BoxView Grid.Row="1"/>
-
-
-
-                <BoxView Grid.Row="2"/>
-                    <StackLayout Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <Label Grid.Column="0" Grid.Row="1"  Text="Full Name: " TextColor="Black"/>
-                        <Label Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding shippingInformation.firstName}" TextColor="Black"/>
-                        <Label Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding shippingInformation.lastName}" TextColor="Black"/>
-                    </StackLayout>
-
-
-                    <BoxView Grid.Row="2"/>
-                <StackLayout Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4" Orientation="Horizontal">
-                    <Label Grid.Column="0" Grid.Row="2"  Text="Address Line 1: " TextColor="Black"/>
-                    <Label Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Text="{Binding shippingInformation.addressOne}" TextColor="Black"/>
-                </StackLayout>
-
-  
-
-                <BoxView Grid.Row="3"/>
-
-                <StackLayout Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Orientation="Horizontal">
-                    <Label Grid.Column="0" Grid.Row="3"  Text="Address Line 2: " TextColor="Black"/>
-                    <Label Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Text="{Binding shippingInformation.addressTwo}" TextColor="Black"/>
-                </StackLayout>
-
-                <BoxView Grid.Row="4"/>
-
-
-                <StackLayout Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal">
-                    <Label Grid.Column="0" Grid.Row="4"  Text="City: " TextColor="Black"/>
-                    <Label Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Text="{Binding shippingInformation.city}" TextColor="Black"/>
-                </StackLayout>
-                
-                <StackLayout Grid.Column="0" Grid.Row="5" Orientation="Horizontal">
-                    <Label Grid.Column="0" Grid.Row="5"  Text="State: " TextColor="Black"/>
-                    <Label Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Text="{Binding shippingInformation.state}" TextColor="Black"/>
-                </StackLayout>
-
-
-                <StackLayout Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Orientation="Horizontal">
-                    <Label Grid.Column="0" Grid.Row="6"  Text="Zipcode: " TextColor="Black"/>
-                    <Label Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Text="{Binding shippingInformation.zipCode}" TextColor="Black"/>
-                    </StackLayout>
-
-                    <StackLayout Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Orientation="Horizontal">
-                        <Label Grid.Column="0" Grid.Row="7"  Text="Phone Number: " TextColor="Black"/>
-                        <Label Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" Text="{Binding shippingInformation.phoneNumber}" TextColor="Black"/>
-                    </StackLayout>
-                </Grid> 
-
-                <BoxView Grid.Row="3"/>
-                    <Grid Grid.ColumnSpan="2" Grid.Row="3" >
-                <Label Grid.Row="0" Text="Delivery Details" TextColor="Black" FontSize="Large" FontAttributes="Bold"/>
-                <Label Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Text="{Binding paymentInformation.deliveryInstructions}" VerticalOptions="Start" TextColor="Black"/>
-            
-                    </Grid>
-               
-            
-            <BoxView Grid.Row="4"/>
-            <Grid Grid.Row="4" Grid.ColumnSpan="2">
+            <!-- order summary -->
+            <BoxView Grid.Row="1" Grid.ColumnSpan="2"/>
+            <Grid x:Name="orderSummary" Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpacing="3">
                 <Grid.RowDefinitions>
+                    <RowDefinition/>    <!-- meal plan + payment option + cost -->
+                    <RowDefinition/>    <!-- estimated shipping + estimated shipping cost -->
+                    <RowDefinition/>    <!-- estimated tax + estimated tax cost-->
+                    <RowDefinition/>    <!-- total cost -->
                     <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    </Grid.RowDefinitions>
+                </Grid.RowDefinitions>
+
+                <!-- order summary header-->
+                <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Order Summary" TextColor="Black" FontSize="Medium"  FontAttributes="Bold" VerticalOptions="Start"/>
+
+                <!-- meal plan + payment option + cost -->
+                <StackLayout Grid.Row="1" Orientation="Horizontal" Grid.ColumnSpan="2" >
+                    <Label x:Name="mealPlan" Grid.Row="1" TextColor="Black"/>
+                    <Label Grid.Row="1" Grid.ColumnSpan="2" Text="-" TextColor="Black"/>
+                    <Label x:Name="paymentOption" Grid.Row="1" HorizontalOptions="End" TextColor="Black"/>
+                </StackLayout>
+                <Label Grid.Column="1" Grid.Row="1" Text="$100.00" TextColor="Black"/>
+
+                <!-- estimated shipping + estimated shipping cost -->
+                <Label Grid.Row="2" Text="Estimated Shipping" TextColor="Black"/>
+                <Label Grid.Column="1" Grid.Row="2" Text="$15.00" TextColor="Black"/>
+
+                <!-- estimated tax + estimated tax cost -->
+
+                    <Label Grid.Row="3" Text="Estimated Tax" TextColor="Black"/>
+                    <Label Grid.Column="1" Grid.Row="3" Text="$10.00" TextColor="Black"/>
+
+
+                <!-- total cost -->
+                    <Label Grid.Row="4" Text="Total: " FontAttributes="Bold" TextColor="Black"/>
+                    <Label Grid.Column="1" Grid.Row="4" Text="$125.00" FontAttributes="Bold" TextColor="Black"/>
+
+            </Grid>
+
+
+            <!-- shipping details -->
+            <BoxView Grid.Row="2"/>
+            <Grid x:Name="shippingDetailsGrid" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpacing="3">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>    <!-- shipping details header -->
+                    <RowDefinition/>    <!-- full name + phone number-->
+                    <RowDefinition/>    <!-- address line 1 + address line 2 -->
+                    <RowDefinition/>    <!-- city + state + zip code -->
+                </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
+                <!-- shipping details header -->
+                <BoxView Grid.Row="0"/>
+                <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Shipping Details" TextColor="Black" FontSize="Medium" FontAttributes="Bold"/>
 
-                <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Payment Details" TextColor="Black"  FontSize="Large" FontAttributes="Bold"/>
+                <!-- first name + last name + phone number -->
+                <BoxView Grid.Row="1"/>
+                <StackLayout Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+                    <Label Grid.Column="0" Grid.Row="1"  Text="Full Name: " TextColor="Black"/>
+                    <Label Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding shippingInformation.firstName}" TextColor="Black"/>
+                    <Label Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding shippingInformation.lastName}" TextColor="Black"/>
+                </StackLayout>
 
+                <StackLayout Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+                    <Label Grid.ColumnSpan="2" Text="Phone #: " TextColor="Black" />
+                    <Label Grid.ColumnSpan="2" Text="{Binding shippingInformation.phoneNumber}" TextColor="Black"/>
+                </StackLayout>
+
+                <!-- address line 1 + address line 2 -->
+                <BoxView Grid.Row="1"/>
+                <StackLayout Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="4" Orientation="Horizontal">
+                    <Label Grid.ColumnSpan="2" Text="Address: " TextColor="Black"/>
+                    <Label  Grid.ColumnSpan="2" Text="{Binding shippingInformation.addressOne}" TextColor="Black"/>
+                    <Label Grid.ColumnSpan="2" Text="{Binding shippingInformation.addressTwo}" TextColor="Black"/>
+                </StackLayout>
+
+                <!-- city + state + zip code-->
+                <StackLayout Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Orientation="Horizontal">
+                    <Label Grid.ColumnSpan="2" Text="                 " TextColor="Black"/>
+                    <Label Grid.ColumnSpan="2" Text="{Binding shippingInformation.city}" TextColor="Black"/>
+                    <Label Grid.ColumnSpan="2" Text="," TextColor="Black"/>
+                    <Label Grid.ColumnSpan="2" Text="{Binding shippingInformation.state}" TextColor="Black"/>
+                    <Label Grid.ColumnSpan="2" Text="{Binding shippingInformation.zipCode}" TextColor="Black"/>
+                </StackLayout>
+
+            </Grid>
+
+            <!-- delivery instructions-->
+            <BoxView Grid.Row="3" Grid.ColumnSpan="2"/>
+            <Grid Grid.ColumnSpan="2" Grid.Row="3">
+                <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Delivery Instructions" TextColor="Black" FontSize="Medium" FontAttributes="Bold"/>
+                <Label Grid.Row="1" Grid.ColumnSpan="2" Grid.RowSpan="2" Text="{Binding paymentInformation.deliveryInstructions}" VerticalOptions="Start" TextColor="Black"/>
+            </Grid>
+
+            <!-- payment details-->
+            <BoxView Grid.Row="4" Grid.ColumnSpan="2"/>
+            <Grid Grid.Row="4" Grid.ColumnSpan="2" Grid.RowSpacing="5">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>    <!-- payment details header -->
+                    <RowDefinition/>    <!-- card number -->
+                    <RowDefinition/>    <!-- cardholder name -->
+                    <RowDefinition/>    <!-- expiration date -->
+                    <RowDefinition/>    <!-- cvv -->
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <!-- payment details header-->
+                <Label Grid.Row="0" Grid.ColumnSpan="2" Text="Payment Details" TextColor="Black"  FontSize="Medium" FontAttributes="Bold"/>
+
+                <!-- card number -->
                 <StackLayout Grid.Column="0" Grid.Row="1" Orientation="Horizontal" Grid.ColumnSpan="2">
                     <Label Grid.Column="0" Grid.Row="1"  Text="Card Number: " TextColor="Black"/>
                     <Label x:Name="lastFourDigits" Grid.Column="0" Grid.Row="1" TextColor="Black"/>
                 </StackLayout>
 
-                    <StackLayout Grid.Column="0" Grid.Row="2"  Orientation="Horizontal">
+                <!-- cardholder name -->
+                <StackLayout Grid.Column="0" Grid.Row="2"  Orientation="Horizontal">
                     <Label Grid.Column="0" Grid.Row="2" Text="Cardholder Name: " TextColor="Black"/>
                     <Label Grid.Column="0" Grid.Row="2" Text="{Binding paymentInformation.cardHolderName}" TextColor="Black"/>
                 </StackLayout>
 
+                <!-- expiration date -->
                 <StackLayout Grid.Column="0" Grid.Row="3" Orientation="Horizontal">
                     <Label Grid.Column="0" Grid.Row="3"  Text="Expiration Date: " TextColor="Black"/>
                     <Label Grid.Column="0" Grid.Row="3" Text="{Binding paymentInformation.expirationMonth}" TextColor="Black"/>
@@ -172,23 +163,21 @@
                     <Label Grid.Column="0" Grid.Row="3" Text="{Binding paymentInformation.expirationYear}" TextColor="Black"/>
                 </StackLayout>
 
-                    <StackLayout Grid.Column="0" Grid.Row="4" Orientation="Horizontal">
-                        <Label Grid.Column="0" Grid.Row="4"  Text="CVV: " TextColor="Black"/>
-                        <Label Grid.Column="0" Grid.Row="4" Text="{Binding paymentInformation.cvv}" TextColor="Black"/>
-                    </StackLayout>
+                <!-- cvv -->
+                <StackLayout Grid.Column="0" Grid.Row="4" Orientation="Horizontal">
+                    <Label Grid.Column="0" Grid.Row="4"  Text="CVV: " TextColor="Black"/>
+                    <Label Grid.Column="0" Grid.Row="4" Text="{Binding paymentInformation.cvv}" TextColor="Black"/>
+                </StackLayout>
 
-                </Grid>
+            </Grid>
 
-
+            <!-- confirm button -->
             <BoxView Grid.Row="5" Grid.ColumnSpan="2" />
             <Button Grid.Row="5" Grid.ColumnSpan="2" Text="Confirm" FontSize="Medium" FontAttributes="Bold" BackgroundColor="#28a745" TextColor="White" HorizontalOptions="Fill" VerticalOptions="Fill" Clicked="ConfirmClicked"/>
 
 
 
         </Grid>
-
-
-        </ScrollView>
 
     </ContentPage.Content>
 </ContentPage>
