--- a/client/src/App.css
+++ b/client/src/App.css
@@ -484,7 +484,7 @@ a {
 .award-text * {
   margin: 0;
   padding: 0;
-  font-size: 12px;
+  font-size: 12px !important;
   letter-spacing: 0.05em;
 }
 .award-text {
@@ -559,11 +559,11 @@ a {
   color: #181818;
 }
 
-br {
+/* br {
   display: block;
   margin: 100px 100px;
   line-height: 22px;
-}
+} */
 
 .required-red {
   color: red;
@@ -676,7 +676,7 @@ hr.two {
 
 hr.three {
   width: 470px;
-  margin: auto;
+  margin: 10px auto;
   border: none;
 }
 
@@ -761,6 +761,17 @@ hr.four {
   height: 550px;
 }
 
+.number-of-meals {
+  color: black;
+}
+.number-of-meals-margin {
+  margin: 10px;
+}
+
+.feedback_marginTop {
+  margin-top: 40px;
+}
+
 /* font */
 
 .font1,
@@ -837,7 +848,10 @@ hr.four {
 }
 
 .bottom_header {
-  margin: 30px 0 50px 0;
+  margin: 30px 0 20px 0;
+}
+.bottom_header p {
+  font-size: 20px;
 }
 
 .start_button {
