addon button nav

--- a/InfiniteMeals/InfiniteMeals/ViewModel/MealSelect/MealSchedule.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/MealSelect/MealSchedule.xaml
@@ -64,6 +64,7 @@
                     HeightRequest="100"
                     BorderWidth="0.1"
                     VerticalOptions="Start"
+                    IsVisible="False"
                     HorizontalOptions="Center"
                     Text="Monday&#x0a;Jun 8"
                     Grid.Column="1"
@@ -148,6 +149,7 @@
                     BorderColor="Black"
                     BorderWidth="0.1"
                     WidthRequest="100"
+                    IsVisible="False"
                     HeightRequest="100"
                     VerticalOptions="Start"
                     HorizontalOptions="Center"
@@ -237,6 +239,7 @@
                     WidthRequest="100"
                     HeightRequest="100"
                     VerticalOptions="Start"
+                    IsVisible="False"
                     HorizontalOptions="Center"
                     Text="Monday&#x0a;Jun 8"
                     Grid.Column="1"
@@ -321,6 +324,7 @@
                     BorderWidth="0.1"
                     WidthRequest="100"
                     HeightRequest="100"
+                    IsVisible="False"
                     VerticalOptions="Start"
                     HorizontalOptions="Center"
                     Text="Monday&#x0a;Jun 8"
@@ -409,6 +413,7 @@
                     BorderWidth="0.1"
                     WidthRequest="100"
                     HeightRequest="100"
+                    IsVisible="False"
                     VerticalOptions="Start"
                     HorizontalOptions="Center"
                     Text="Monday&#x0a;Jun 8"
@@ -499,6 +504,7 @@
                     VerticalOptions="Start"
                     HorizontalOptions="Center"
                     Text="Monday&#x0a;Jun 8"
+                    IsVisible="False"
                     Grid.Column="1"
                     Grid.Row="16"
                     Clicked="ClickedColor"/>
