Update login.js style

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,11 @@ a {
   font-family: montserrat;
 }
 
+.btn.focus, .btn:focus {
+    outline: 0;
+    box-shadow: none!important;
+}
+
 /* ----- navigation header ----- */
 
 .navigation-container {
